[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "rhdh-rag-content"
description = "RAG for RHDH"
version = "0.3.0"
dependencies = [
    "lightspeed-rag-content @ git+https://github.com/lightspeed-core/rag-content@56f67f774d02b9adf20bf7999c80c043c7dadd1b",
    "pyyaml",
]

authors = [
    {name = "Maysun J Faisal"},
    {name = "Jordan Dubrick"},
]
requires-python = "==3.12.*"
readme = "README.md"
license = {text = "Apache"}
